specify url, number of thread as arguments